08_Networking/Ingress/nginx-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: nginx
  name: nginx-deploy
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: nginx
  type: ClusterIP
