08_Networking/Ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-deploy
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: hamityldrm.com
      http:
        paths:
        - backend:
            service:
              name: nginx-deploy
              port:
                number: 80
          path: /
          pathType: ImplementationSpecific
